--- a/mongoDB/mongo.ipynb
+++ b/mongoDB/mongo.ipynb
@@ -571,7 +571,9 @@
     "    | $set | Sets the value of a field in a document. |\n",
     "    | $setOnInsert | Sets the value of a field if an update results in an insert of a document. Has no effect on update operations that modify existing documents. |\n",
     "    | $unset | Removes the specified field from a document. |\n",
+    "    \n",
     "&nbsp;\n",
+    "\n",
     "- **Array**\n",
     "\n",
     "    - **Operators**\n",
@@ -580,13 +582,15 @@
     "        | ---- | ----------- |\n",
     "        | $ | Acts as a placeholder to update the first element that matches the query condition. |\n",
     "        | $[ ] | Acts as a placeholder to update all elements in an array for the documents that match the query condition. |\n",
-    "        | $[\\<identifier\\>] | Acts as a placeholder to update all elements that match the arrayFilters condition for the documents that match the query condition. |\n",
+    "        | $[<identifier\\>] | Acts as a placeholder to update all elements that match the arrayFilters condition for the documents that match the query condition. |\n",
     "        | $addToSet | Adds elements to an array only if they do not already exist in the set. |\n",
     "        | $pop | Removes the first or last item of an array. |\n",
     "        | $pull | Removes all array elements that match a specified query. |\n",
     "        | $push | Adds an item to an array. |\n",
     "        | $pullAll | Removes all matching values from an array. |\n",
+    "\n",
     "    &nbsp;\n",
+    "\n",
     "    - **Modifiers**\n",
     "\n",
     "        | Name | Description |\n",
@@ -595,7 +599,9 @@
     "        | $position | Modifies the $push operator to specify the position in the array to add elements. |\n",
     "        | $slice | Modifies the $push operator to limit the size of updated arrays. |\n",
     "        | $sort | Modifies the $push operator to reorder documents stored in an array. |\n",
+    "\n",
     "&nbsp;\n",
+    "\n",
     "- **Bitwise**\n",
     "\n",
     "    | Name | Description |\n",
