--- a/mongoDB/mongo.ipynb
+++ b/mongoDB/mongo.ipynb
@@ -558,8 +558,9 @@
    "metadata": {},
    "source": [
     "#### **Update Operators**\n",
-    "\n",
+    "  \n",
     "- **Fields**\n",
+    "  \n",
     "    | Name | Description |\n",
     "    | ---- | ----------- |\n",
     "    | $currentDate | Sets the value of a field to current date, either as a Date or a Timestamp. |\n",
@@ -571,10 +572,13 @@
     "    | $set | Sets the value of a field in a document. |\n",
     "    | $setOnInsert | Sets the value of a field if an update results in an insert of a document. Has no effect on update operations that modify existing documents. |\n",
     "    | $unset | Removes the specified field from a document. |\n",
+    "&nbsp;\n",
     "- **Array**\n",
+    "  \n",
     "    - **Operators**\n",
-    "        | Name | Description |  \n",
-    "        | ---- | ----------- |  \n",
+    "      \n",
+    "        | Name | Description |\n",
+    "        | ---- | ----------- |\n",
     "        | $ | Acts as a placeholder to update the first element that matches the query condition. |\n",
     "        | $[ ] | Acts as a placeholder to update all elements in an array for the documents that match the query condition. |\n",
     "        | $[<identifier\\>] | Acts as a placeholder to update all elements that match the arrayFilters condition for the documents that match the query condition. |\n",
@@ -583,22 +587,18 @@
     "        | $pull | Removes all array elements that match a specified query. |\n",
     "        | $push | Adds an item to an array. |\n",
     "        | $pullAll | Removes all matching values from an array. |\n",
-    "\n",
     "    &nbsp;\n",
-    "\n",
     "    - **Modifiers**\n",
-    "\n",
+    "  \n",
     "        | Name | Description |\n",
     "        | ---- | ----------- |\n",
     "        | $each | Modifies the $push and $addToSet operators to append multiple items for array updates. |\n",
     "        | $position | Modifies the $push operator to specify the position in the array to add elements. |\n",
     "        | $slice | Modifies the $push operator to limit the size of updated arrays. |\n",
     "        | $sort | Modifies the $push operator to reorder documents stored in an array. |\n",
-    "\n",
     "&nbsp;\n",
-    "\n",
     "- **Bitwise**\n",
-    "\n",
+    "  \n",
     "    | Name | Description |\n",
     "    | ---- | ----------- |\n",
     "    | $bit | Performs bitwise AND, OR, and XOR updates of integer values.\n",
