--- a/mongoDB/mongo.ipynb
+++ b/mongoDB/mongo.ipynb
@@ -583,28 +583,33 @@
     "\n",
     "&nbsp;\n",
     "- **Array**\n",
-    "\n",
+    "        \n",
     "    - **Operators**\n",
     "    \n",
-    "        | Name | Description |\n",
-    "        | ---- | ----------- |\n",
-    "        | $ | Acts as a placeholder to update the first element that matches the query condition. |\n",
-    "        | $[ ] | Acts as a placeholder to update all elements in an array for the documents that match the query condition. |\n",
-    "        | $[<identifier\\>] | Acts as a placeholder to update all elements that match the arrayFilters condition for the documents that match the query condition. |\n",
-    "        | $addToSet | Adds elements to an array only if they do not already exist in the set. |\n",
-    "        | $pop | Removes the first or last item of an array. |\n",
-    "        | $pull | Removes all array elements that match a specified query. |\n",
-    "        | $push | Adds an item to an array. |\n",
-    "        | $pullAll | Removes all matching values from an array. |\n",
-    "    &nbsp;\n",
+    "| Name | Description |\n",
+    "| ---- | ----------- |\n",
+    "| $ | Acts as a placeholder to update the first element that matches the query condition. |\n",
+    "| $[ ] | Acts as a placeholder to update all elements in an array for the documents that match the query condition. |\n",
+    "| $[<identifier\\>] | Acts as a placeholder to update all elements that match the arrayFilters condition for the documents that match the query condition. |\n",
+    "| $addToSet | Adds elements to an array only if they do not already exist in the set. |\n",
+    "| $pop | Removes the first or last item of an array. |\n",
+    "| $pull | Removes all array elements that match a specified query. |\n",
+    "| $push | Adds an item to an array. |\n",
+    "| $pullAll | Removes all matching values from an array. |\n",
+    "\n",
+    "&nbsp;\n",
+    "    \n",
+    "- **Array**\n",
+    "    \n",
     "    - **Modifiers**\n",
     "\n",
-    "        | Name | Description |\n",
-    "        | ---- | ----------- |\n",
-    "        | $each | Modifies the $push and $addToSet operators to append multiple items for array updates. |\n",
-    "        | $position | Modifies the $push operator to specify the position in the array to add elements. |\n",
-    "        | $slice | Modifies the $push operator to limit the size of updated arrays. |\n",
-    "        | $sort | Modifies the $push operator to reorder documents stored in an array. |\n",
+    "| Name | Description |\n",
+    "| ---- | ----------- |\n",
+    "| $each | Modifies the $push and $addToSet operators to append multiple items for array updates. |\n",
+    "| $position | Modifies the $push operator to specify the position in the array to add elements. |\n",
+    "| $slice | Modifies the $push operator to limit the size of updated arrays. |\n",
+    "| $sort | Modifies the $push operator to reorder documents stored in an array. |\n",
+    "\n",
     "&nbsp;\n",
     "- **Bitwise**\n",
     "\n",
