--- a/mongoDB/mongo.ipynb
+++ b/mongoDB/mongo.ipynb
@@ -582,9 +582,7 @@
     "| $unset | Removes the specified field from a document. |\n",
     "\n",
     "&nbsp;\n",
-    "- **Array**\n",
-    "        \n",
-    "    - **Operators**\n",
+    "- **Array** - **Operators**\n",
     "    \n",
     "| Name | Description |\n",
     "| ---- | ----------- |\n",
@@ -599,9 +597,7 @@
     "\n",
     "&nbsp;\n",
     "    \n",
-    "- **Array**\n",
-    "    \n",
-    "    - **Modifiers**\n",
+    "- **Array** - **Modifiers**\n",
     "\n",
     "| Name | Description |\n",
     "| ---- | ----------- |\n",
