--- a/01-python/5-functions.ipynb
+++ b/01-python/5-functions.ipynb
@@ -425,6 +425,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "| Directive\t| Meaning | Example |\n",
+    "| --------- | ------- | ------- |\n",
+    "| **%a** | Abbreviated weekday name. | Sun, Mon, ... |\n",
+    "| **%A** | Full weekday name. | Sunday, Monday, ... |\n",
+    "| **%w** | Weekday as a decimal number. | 0, 1, ..., 6 |\n",
+    "| **%d** | Day of the month as a zero-padded decimal. | 01, 02, ..., 31 |\n",
+    "| **%-d** | Day of the month as a decimal number. | 1, 2, ..., 30 |\n",
+    "| **%b** | Abbreviated month name. | Jan, Feb, ..., Dec |\n",
+    "| **%B** | Full month name. | January, February, ... |\n",
+    "| **%m** | Month as a zero-padded decimal number. | 01, 02, ..., 12 |\n",
+    "| **%-m** | Month as a decimal number. | 1, 2, ..., 12 |\n",
+    "| **%y** | Year without century as a zero-padded decimal number. | 00, 01, ..., 99 |\n",
+    "| **%-y** | Year without century as a decimal number. | 0, 1, ..., 99 |\n",
+    "| **%Y** | Year with century as a decimal number. | 2013, 2019 etc. |\n",
+    "| **%H** | Hour (24-hour clock) as a zero-padded decimal number. | 00, 01, ..., 23 |\n",
+    "| **%-H** | Hour (24-hour clock) as a decimal number. | 0, 1, ..., 23 |\n",
+    "| **%I**| Hour (12-hour clock) as a zero-padded decimal number. | 01, 02, ..., 12 |\n",
+    "| **%-I** | Hour (12-hour clock) as a decimal number. | 1, 2, ... 12 |\n",
+    "| **%p**| Locale’s AM or PM. | AM, PM |\n",
+    "| **%M**| Minute as a zero-padded decimal number. | 00, 01, ..., 59 |\n",
+    "| **%-M** | Minute as a decimal number. | 0, 1, ..., 59 |\n",
+    "| **%S**| Second as a zero-padded decimal number. | 00, 01, ..., 59 |\n",
+    "| **%-S** | Second as a decimal number. | 0, 1, ..., 59 |\n",
+    "| **%f** | Microsecond as a decimal number, zero-padded on the left. | 000000 - 999999 |\n",
+    "| **%z** | UTC offset in the form +HHMM or -HHMM. ||\n",
+    "| **%Z** | Time zone name. ||\n",
+    "| **%j** | Day of the year as a zero-padded decimal number. | 001, 002, ..., 366 |\n",
+    "| **%-j** | Day of the year as a decimal number. | 1, 2, ..., 366 |\n",
+    "| **%U** | Week number of the year (Sunday as the first day of the week). All days in a new year preceding the first Sunday are considered to be in week 0. | 00, 01, ..., 53 |\n",
+    "| **%W** | Week number of the year (Monday as the first day of the week). All days in a new year preceding the first Monday are considered to be in week 0. | 00, 01, ..., 53 |\n",
+    "| **%c** | Locale’s appropriate date and time representation. | Mon Sep 30 07:06:05 2013 |\n",
+    "| **%x** | Locale’s appropriate date representation. | 09/30/13 |\n",
+    "| **%X** | Locale’s appropriate time representation. | 07:06:05 |\n",
+    "| **%%** | A literal '%' character. | % |"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### time"
    ]
   },
