--- a/01-python/9-oops.ipynb
+++ b/01-python/9-oops.ipynb
@@ -454,6 +454,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **delegation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task 1\n",
+      "Task 2\n",
+      "Task 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class delegate:\n",
+    "    def task2(self):\n",
+    "        print('Task 2')\n",
+    "\n",
+    "    def task3(self):\n",
+    "        print('Task 3')\n",
+    "\n",
+    "class delegator:\n",
+    "    def __init__(self) -> None:\n",
+    "        self._delegate = delegate()\n",
+    "        \n",
+    "    def task1(self):\n",
+    "        print('Task 1')\n",
+    "\n",
+    "    # for simple classes with less number of methods, create separate functions like this\n",
+    "    def task2(self):\n",
+    "        self._delegate.task2()\n",
+    "\n",
+    "    # for complex classes, use this method\n",
+    "    def __getattr__(self, __name: str):\n",
+    "        return getattr(self._delegate, __name)\n",
+    "    \n",
+    "x = delegator()\n",
+    "x.task1()\n",
+    "x.task2()\n",
+    "x.task3()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### There are 4 pillars to object oriented programming\n",
     "- Encapsulation\n",
     "- Abstraction\n",
