--- a/Regex/regex.ipynb
+++ b/Regex/regex.ipynb
@@ -403,6 +403,109 @@
    "source": [
     "re.sub(r'(\\w)\\d*', r'**\\1**', 'A1, B12, K200')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lookahead, Lookbehind and Non-capturing groups\n",
+    "lookahead, lookbehind and non-capturing groups are groups which will not be considered for result, but will be used for matching."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A lookahead is used to find a pattern which is immediately followed (or not followed) by another pattern. There are two types:\n",
+    "    - **positive lookahead**: matches a pattern which is immediately followed by something. syntax: `<pattern>(?= value )`\n",
+    "    - **negative lookahead**: matches a pattern which is immediately not followed by something. syntax: `<pattern>(?! value )`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLA:  ['4']\n",
+      "NLA:  ['3', '7']\n"
+     ]
+    }
+   ],
+   "source": [
+    "PLAregex = re.compile(r'\\d+(?=apple)')     # matches digit which is followed by word apple\n",
+    "NLAregex = re.compile(r'\\d+(?!apple)')     # matches digit which is not followed by word apple\n",
+    "items = '3orange 4apples 7orange'\n",
+    "\n",
+    "print('PLA: ',PLAregex.findall(items))\n",
+    "print('NLA: ',NLAregex.findall(items))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A lookbehind is used to find a pattern which is immediately preceeded (or not preceeded) by an expression.\n",
+    "    - **positive lookbehind**: matches an expression which is immediately preceeded by something. syntax: `(?<= value )<pattern>`\n",
+    "    - **negative lookbehind**: matches an expression which is immediately not preceeded by something. syntax: `(?<! value )<pattern>`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['5']\n",
+      "['20', '35']\n"
+     ]
+    }
+   ],
+   "source": [
+    "PLBregex = re.compile(r'(?<=apples-)\\d+')      # matches digit immediately preceeded by apples-\n",
+    "NLBregex = re.compile(r'(?<!apples-)\\d+')         # matches digit immediately not preceeded by apples-\n",
+    "items = 'apples-5 oranges-20 oranges-35'\n",
+    "\n",
+    "print(PLBregex.findall(items))\n",
+    "print(NLBregex.findall(items))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- A **non capturing group** is used to mention a group that is used for matching, but will not be captured. syntax: `(?:value)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('GODZILLA', 'KONG')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'(\\w+)(?:vs)(\\w+)', 'GODZILLAvsKONG')       # excludes group 'vs'"
+   ]
   }
  ],
  "metadata": {
