--- a/Regex/regex.ipynb
+++ b/Regex/regex.ipynb
@@ -506,6 +506,14 @@
    "source": [
     "re.findall(r'(\\w+)(?:vs)(\\w+)', 'GODZILLAvsKONG')       # excludes group 'vs'"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "suggestion : https://automatetheboringstuff.com/2e/chapter7/"
+   ]
   }
  ],
  "metadata": {
