Added Notes-Probability distributions

--- a/Statistics/probability_distributions.ipynb
+++ b/Statistics/probability_distributions.ipynb
@@ -99,6 +99,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -114,6 +115,7 @@
     "  x - probability  \n",
     "  $\\alpha$ - number of success in the trial + 1  \n",
     "  $\\beta$ - number of failures + 1  \n",
+    "  $\\Beta$ - Beta function\n",
     "<br>\n",
     "\n",
     "Example:\n",
