--- a/01-python/9-oops.ipynb
+++ b/01-python/9-oops.ipynb
@@ -784,6 +784,16 @@
    "source": [
     "suggestion : https://youtu.be/Ej_02ICOIgs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Magic Methods\n",
+    "These are some of the operator magic methods:\n",
+    "\n",
+    "![Magic Methods](img/magic_methods.png)"
+   ]
   }
  ],
  "metadata": {
